--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>pl.azpal</groupId>
   <artifactId>AZRank</artifactId>
-  <version>1.1.2</version>
+  <version>1.2.2</version>
   <packaging>jar</packaging>
 
   <name>AZRank</name>
@@ -35,6 +35,11 @@
       <groupId>de.bananaco</groupId>
       <artifactId>bpermissions</artifactId>
       <version>2.9.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.milkbowl</groupId>
+      <artifactId>vault</artifactId>
+      <version>1.2.16</version>
     </dependency>
   </dependencies>
   
