added Vault to Dependies

--- a/src/main/java/plugin.yml
+++ b/src/main/java/plugin.yml
@@ -3,7 +3,7 @@ description: Easier method to set the groups of players
 main: pl.azpal.azrank.AZRank
 name: AZRank
 version: 1.2.2
-softdepend: [PermissionsEx, bPermissions, GroupManager]
+depend: Vault
 commands:
   azrank:
     description: Gets info about player or Sets the rank of a user
