--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=AZRank
-application.vendor=Ucze\u01449
+application.vendor=Rutr
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,7 +30,9 @@ file.reference.AZRank-src=src
 file.reference.bukkit-1.2.5-R3.0.jar=lib/bukkit-1.2.5-R3.0.jar
 file.reference.Vault.jar=lib/Vault.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.Vault.jar}:\
     ${file.reference.bukkit-1.2.5-R3.0.jar}
@@ -57,6 +59,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
