new database format(few temporiary groups with difrent time) updated info and set commands to new system. changed version to 1.3.beta1

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -84,4 +84,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.bukkit-1.2.5-R3.0.jar=J:\\java\\workspace\\sources\\Bukkit-Bukkit-1.2.5-R4.0-11-g6525a30.zip!/Bukkit-Bukkit-6525a30/src/main/java/
 src.dir=${file.reference.AZRank-src}
