--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,10 +1,13 @@
 author: Rutr
 description: Give groups for specified time
-main: pl.azpal.azrank.AZRank
+main: pl.rutr.minecraft.azrank.AZRank
 name: AZRank
-version: 1.3.b4
+version: 1.3.b5
 softdepend: [Vault,PermissionsEx,GroupManager]
 commands:
+  azrank:
+    description: Display version of AZRank
+    usage: "Usage: /<command>"
   azplayer:
     description: List player groups
     usage: "Usage: /<command> <player>"
